[package]
name = "fuchsia-llui"
version = "0.1.0"
authors = ["Rob Tsuk <robtsuk@google.com>"]

[dependencies]
bitflags = "0.7.0"
fdio = { path = '../fdio' }
font-rs = { git = "https://github.com/google/font-rs.git" }
fuchsia-zircon = "0.3.0"
fuchsia-zircon-sys = "0.3.0"
futures = "0.1.15"
libc = "0.2"
tokio-core = "0.1.10"

[dependencies.error-chain]
version = "0.11.0"
default-features = false

[patch.crates-io]
tokio-core = { path = "../../../../../third_party/rust-mirrors/tokio-core" }
mio = { path = "../../../../../third_party/rust-mirrors/mio" }
fuchsia-zircon = { path = "../fuchsia-zircon" }
fuchsia-zircon-sys = { path = "../fuchsia-zircon/fuchsia-zircon-sys" }
