# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/compiled_action.gni")
import("//build/rust/rust_binary.gni")
import("//build/package.gni")

rust_binary("gn-deps-bin") {
  name = "gn-deps"
  output_name = "gn-deps-bin"
  deps = []
}

compiled_action("run-gn-deps") {
  tool = ":gn-deps-bin"
  inputs = []
  outputs = [
    "$target_gen_dir/gn_deps_complete","
  ]
  args = []
}
